--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link  rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>hello website</h1>
+    <header>
+        <div class="navbar">
+            <div class="nav-logo border">
+                <div class="logo">
+                    <img src="amazon_logo.png"/>
+                </div>
+            </div>
+
+
+
+
+        </div>
+
+    </header>
+    
+
 </body>
 </html>
