--- a/index.html
+++ b/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link  rel="stylesheet" href="style.css"/>
+    <title>Amazon Navbar</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <header>
-        <div class="navbar">
-            <div class="nav-logo border">
-                <div class="logo">
-                    <img src="amazon_logo.png"/>
-                </div>
-            </div>
 
+<header>
+    <div class="navbar">
 
-
-
+        <div class="nav-logo border">
+            <img src="amazon_logo.png" alt="logo">
         </div>
 
-    </header>
-    
+        <div class="newaddress border">
+            <p class="add-first">Deliver to</p>
+            <p class="add-second">India</p>
+            <p>hello</p>
+            <!-- /// -->
+        </div>
+
+    </div>
+</header>
 
 </body>
 </html>
