--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
         <div class="navbar">
             <div class="nav-logo border">
                 <div class="logo">
-                    <img src="amazon_logo.png"/>
+        
+                </div>
+                </div>
+                <div class="nav-addres">
+                    <p class="add-first">Deliver to</P>
+                        <div class="add-icon">
+                           
+                            <P class="add-second">India</P>
+                        </div>
                 </div>
             </div>
 
