--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
         
                 </div>
                 </div>
-                <div class="nav-addres">
+                <div class="nav-addres border">
                     <p class="add-first">Deliver to</P>
                         <div class="add-icon">
                            
                             <P class="add-second">India</P>
                         </div>
+                </div>
+                <div class="nav-search">
+                    <select>
+                        <option>All</option>
+                    </select>
+                    <input placeholder="Search Amazon">
+                    <div class="Search-icon"></div>
                 </div>
             </div>
 
