--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="navbar">
             <div class="nav-logo border">
-                <div class="logo">
+                <div class="logo"></div>
         
                 </div>
                 </div>
