Updated index and style file

--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
                         <div class="logo" role="img" aria-label="Amazon logo"></div>
                     </a>
                     <div class="nav-address border">
-                        <div class="add-first">Deliver to</div>
-                        <div class="add-second">India</div>
+                        <span class="location" aria-hidden="true">
+                            <!-- location pin (inline SVG) -->
+                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                <path fill="currentColor" d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 110-5 2.5 2.5 0 010 5z"/>
+                            </svg>
+                        </span>
+                        <div class="address-text">
+                            <div class="add-first">Deliver to</div>
+                            <div class="add-second">India</div>
+                        </div>
                     </div>
                 </div>
 
