--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@
                     <div class="nav-right">
                         <a href="#" class="nav-link">Hello, Sign in</a>
                         <a href="#" class="nav-link">Returns</a>
-                        <a href="#" class="nav-cart">Cart (0)</a>
+                        <a href="#" class="nav-cart" aria-label="Cart, 0 items">
+                            <span class="cart-icon" aria-hidden="true">
+                                <!-- shopping cart / basket inline SVG -->
+                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor" focusable="false" aria-hidden="true">
+                                    <path d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2S15.9 22 17 22s2-.9 2-2-.9-2-2-2zM7.16 14l.84-2h7.45c.75 0 1.41-.41 1.75-1.03l2.58-5.02A1 1 0 0018.86 4H5.21L4.27 2H1v2h2l3.6 7.59-1.35 2.45C5.09 15.37 5 15.68 5 16c0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25z"/>
+                                </svg>
+                            </span>
+                            <span class="cart-text">Cart</span>
+                            <span class="cart-count" aria-hidden="true">0</span>
+                        </a>
                     </div>
                 </div>
             </div>
